syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.torresmath.key.manager";
option java_outer_classname = "GenerateKeyGrpc";
option objc_class_prefix = "HLW";

package br.com.torresmath.key.manager;

service GenerateKeyGrpcService {
  rpc generateKey (KeyRequest) returns (KeyResponse) {}
}

message KeyRequest {
  string clientId = 1;
  KeyType keyType = 2;
  string keyIdentifier = 3;
  AccountType accountType = 4;
}

message KeyResponse {
  string pixId = 1;
  KeyStatus status = 2;
}

enum KeyStatus {
  INACTIVE = 0;
  ACTIVE = 1;
  DELETE = 2;
}

enum KeyType {
  CPF = 0;
  MOBILE_NUMBER = 1;
  EMAIL = 2;
  RANDOM = 3;
}

enum AccountType {
  CHECKING_ACCOUNT = 0;
  SAVINGS_ACCOUNT = 1;
}