syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.torresmath.key.manager";
option java_outer_classname = "RetrieveKeyGrpc";
option objc_class_prefix = "HLW";

package br.com.torresmath.key.manager;

import "google/protobuf/timestamp.proto";
import "generateKey.proto";

service RetrieveKeyGrpcService {
  rpc retrieveKey(RetrieveKeyRequest) returns (KeyDetailResponse) {}
  rpc retrieveKeyByIdentifier(RetrieveKeyByIdentifierRequest) returns (KeyDetailResponse) {}
}

message RetrieveKeyByIdentifierRequest {
  string key = 1;
}

message RetrieveKeyRequest {
  string clientId = 1;
  string pixId = 2;
}

message KeyDetailResponse {
  string clientId = 1;
  string pixId = 2;
  string keyType = 3;
  string key = 4;
  KeyOwnerResponse owner = 5;
  KeyAccountResponse account = 6;
  google.protobuf.Timestamp createdAt = 7;
}

message KeyOwnerResponse {
  string name = 1;
  string cpf = 2;
}

message KeyAccountResponse {
  string number = 1;
  string branch = 2;
  AccountType type = 3;
  KeyAccountInstitutionResponse institution = 4;
}

message KeyAccountInstitutionResponse {
  string name = 1;
  string isbn = 2;
}